--- a/app/src/main/res/layout/list_item_episode.xml
+++ b/app/src/main/res/layout/list_item_episode.xml
@@ -38,6 +38,7 @@
             tools:visibility="visible">
 
             <LinearLayout
+                android:id="@+id/listItem_episode_showName_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
