--- a/app/src/main/res/layout/dialog_detail_joke.xml
+++ b/app/src/main/res/layout/dialog_detail_joke.xml
@@ -144,11 +144,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
-                android:text="Zuletzt geändert:"
+                android:text="Erstellt am:"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/dialog_detailJoke_lastChanged"
+                android:id="@+id/dialog_detailJoke_addedDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
