--- a/app/src/main/res/layout/dialog_detail_joke.xml
+++ b/app/src/main/res/layout/dialog_detail_joke.xml
@@ -170,15 +170,15 @@
                 android:text="Bewerting:"
                 android:textStyle="bold" />
 
-            <RatingBar
+            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                 android:id="@+id/dialog_detailJoke_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:isIndicator="true"
                 android:max="5"
                 android:numStars="5"
-                android:rating="2.5"
-                android:stepSize="0.5" />
+                android:stepSize="0.25" />
 
         </LinearLayout>
 
