--- a/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
@@ -259,18 +259,36 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:text="Bewerting:"
                 android:textStyle="bold" />
 
-            <RatingBar
-                android:id="@+id/dialog_editOrAddKnowledge_rating"
+            <FrameLayout
+                android:id="@+id/customRating_layout"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:max="5"
-                android:numStars="5"
-                android:rating="-1"
-                android:stepSize="0.5" />
+                android:layout_height="wrap_content">
+
+                <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                    android:id="@+id/customRating_ratingBar"
+                    style="@android:style/Widget.Material.Light.ActionBar"
+                    android:layout_width="240dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="16dp"
+                    android:elevation="0dp"
+                    android:isIndicator="true"
+                    android:rating="0"
+                    android:stepSize="0.25" />
+
+                <SeekBar
+                    android:id="@+id/customRating_seekBar"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="272dp"
+                    android:layout_height="match_parent"
+                    android:alpha="0"
+                    android:background="@null"
+                    android:max="20"
+                    android:progress="0" />
+            </FrameLayout>
+
 
         </LinearLayout>
 
