--- a/app/src/main/res/layout/dialog_detail_show.xml
+++ b/app/src/main/res/layout/dialog_detail_show.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,31 +18,31 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:visibility="gone"-->
+            <!--                android:orientation="horizontal">-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp"
-                    android:text="Titel:"
-                    android:textStyle="bold" />
+            <!--                <TextView-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_marginRight="8dp"-->
+            <!--                    android:text="Titel:"-->
+            <!--                    android:textStyle="bold" />-->
 
-                <TextView
-                    android:id="@+id/dialog_detailShow_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    tools:text="Name1" />
-            </LinearLayout>
+            <!--                <TextView-->
+            <!--                    android:id="@+id/dialog_detailShow_title"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_weight="1"-->
+            <!--                    tools:text="Name1" />-->
+            <!--            </LinearLayout>-->
 
             <LinearLayout
                 android:id="@+id/dialog_detailShow_punchLine_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -83,6 +83,30 @@
 
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="Detail:"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/dialog_detailShow_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    tools:text="Staffeln: *, Folgen: *, " />
+
+
+            </LinearLayout>
         </LinearLayout>
 
         <ImageView
@@ -99,22 +123,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
+        android:gravity="end"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="Detail:"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/dialog_detailShow_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            tools:text="Staffeln: *, Folgen: *, " />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/dialog_detailShow_reset"
+                style="@style/ImageButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_reset" />
+
+            <ImageView
+                android:id="@+id/dialog_detailShow_sync"
+                style="@style/ImageButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_sync" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -148,26 +180,6 @@
                     app:srcCompat="@drawable/ic_list" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="end">
-                <ImageView
-                    android:id="@+id/dialog_detailShow_reset"
-                    style="@style/ImageButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_reset" />
-
-                <ImageView
-                    android:id="@+id/dialog_detailShow_sync"
-                    style="@style/ImageButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_sync" />
-
-            </LinearLayout>
 
         </LinearLayout>
 
