--- a/app/src/main/res/layout/list_item_knowledge.xml
+++ b/app/src/main/res/layout/list_item_knowledge.xml
@@ -91,6 +91,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
                     android:layout_marginRight="8dp"
                     android:text="Inhalt:"
                     android:textStyle="bold" />
@@ -104,6 +105,7 @@
                         android:id="@+id/listItem_knowledge_content"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
                         android:layout_weight="1"
                         android:ellipsize="marquee"
                         android:fadingEdge="horizontal"
