--- a/app/src/main/res/layout/dialog_filter_by_rating.xml
+++ b/app/src/main/res/layout/dialog_filter_by_rating.xml
@@ -1,10 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <com.stfalcon.pricerangebar.RangeBarWithChart
-        android:id="@+id/dialog_filterByRating_rangeBar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/dialog_filterByRating_range"
+            style="@style/TextButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            tools:text="1.25 ☆ – 4.5 ☆" />
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="8dp">
+
+        <SeekBar
+            android:id="@+id/dialog_filterByRating_singleBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="9dp"
+            android:layout_marginRight="7dp"
+            android:max="20"
+            android:progress="19"
+            android:progressTint="@color/colorTransparent" />
+
+        <com.innovattic.rangeseekbar.RangeSeekBar
+            android:id="@+id/dialog_filterByRating_rangeBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            app:rsb_initialMaxThumbValue="20"
+            app:rsb_initialMinThumbValue="0"
+            app:rsb_max="20"
+            app:rsb_maxThumbDrawable="@drawable/ic_dot"
+            app:rsb_maxThumbOffsetHorizontal="7dp"
+            app:rsb_minRange="0"
+            app:rsb_minThumbDrawable="@drawable/ic_dot"
+            app:rsb_minThumbOffsetHorizontal="-7dp"
+            app:rsb_touchRadius="25dp"
+            app:rsb_trackColor="@color/colorTransparent"
+            app:rsb_trackRoundedCaps="false"
+            app:rsb_trackSelectedColor="@color/colorPrimaryDark"
+            app:rsb_trackSelectedRoundedCaps="true"
+            app:rsb_trackSelectedThickness="3dp"
+            app:rsb_trackThickness="2dp"
+            tools:alpha="0.5" />
+
+    </FrameLayout>
 </LinearLayout>
