--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -1,54 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.Content.VideoActivity">
-
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="vertical">-->
-
-<!--        <SearchView-->
-<!--            android:id="@+id/search"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:focusable="auto"-->
-<!--            android:iconifiedByDefault="false"-->
-<!--            android:inputType="textCapSentences"-->
-<!--            android:queryBackground="@android:color/transparent"-->
-<!--            android:queryHint="Filter eingeben ('&amp;' als 'und'; '|' als 'oder')"/>-->
-
-
-<!--        <View-->
-<!--            android:id="@+id/divider"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="1dp"-->
-<!--            android:background="?android:attr/listDivider"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/search" />-->
-
-<!--        <FrameLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent">-->
-
-<!--            <androidx.recyclerview.widget.RecyclerView-->
-<!--                android:id="@+id/recycler"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/no_item"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center_horizontal"-->
-<!--                android:layout_marginTop="20dp"-->
-<!--                android:text="Kein Eintrag"-->
-<!--                android:textStyle="italic" />-->
-<!--        </FrameLayout>-->
-<!--    </LinearLayout>-->
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -60,80 +16,108 @@
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorBackground"
-            app:expanded="false">
+            android:background="@drawable/header_gradiant"
+            app:expanded="false"
+            tools:expanded="true">
 
-            <TextView
-                android:id="@+id/elementCount"
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="16dp"
-                android:text="20 Elemente"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                app:layout_scrollFlags="scroll|snap" />
+                android:layout_height="match_parent"
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleGravity="top"
+                app:expandedTitleMarginStart="50dp"
+                app:expandedTitleMarginTop="10dp"
+                android:theme="@style/ToolBarStyle"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-            <SearchView
-                android:id="@+id/search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:focusable="auto"
-                android:iconifiedByDefault="false"
-                android:inputType="textCapSentences"
-                android:queryBackground="@android:color/transparent"
-                android:queryHint="Filter eingeben ('&amp;' als 'und'; '|' als 'oder')"
-                app:layout_scrollFlags="scroll|enterAlways|snap" />
+                <TextView
+                    android:id="@+id/elementCount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="120dp"
+                    android:layout_marginBottom="210dp"
+                    android:gravity="center_vertical"
+                    android:text="Test"
+                    android:layout_gravity="bottom"
+                    android:textAlignment="center"
+                    android:textColor="#FFFFFF"
+                    android:textSize="36sp"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="0.4"/>
 
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="?android:attr/listDivider"
-                app:layout_scrollFlags="scroll|enterAlways" />
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:menu="@menu/task_bar_video"
+                    app:navigationIcon="@drawable/ic_arrow_back_white"
+                    app:title="test" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:background="@color/colorBackground"
+                    android:orientation="vertical"
+                    app:layout_scrollFlags="scroll|enterAlways|snap">
+
+                    <SearchView
+                        android:id="@+id/search"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="auto"
+                        android:iconifiedByDefault="false"
+                        android:inputType="textCapSentences"
+                        android:theme="@style/AppTheme"
+                        android:queryBackground="@android:color/transparent"
+                        android:queryHint="Filter eingeben ('&amp;' als 'und'; '|' als 'oder')"
+                        app:layout_scrollFlags="scroll|enterAlways|snap" />
+
+                    <View
+                        android:id="@+id/divider"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="?android:attr/listDivider"
+                        app:layout_scrollFlags="scroll|enterAlways" />
+                </LinearLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
 
         </com.google.android.material.appbar.AppBarLayout>
 
 
-<!--        <androidx.core.widget.NestedScrollView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-<!--                    <FrameLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="match_parent">-->
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/recycler"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-<!--                    </FrameLayout>-->
-
-<!--        </androidx.core.widget.NestedScrollView>-->
 
         <TextView
             android:id="@+id/no_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="69dp"
+            android:layout_marginTop="130dp"
             android:text="Kein Eintrag"
             android:textStyle="italic" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/videos_confirmDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
         android:visibility="gone"
-        android:layout_gravity="end|bottom"
         app:srcCompat="@drawable/ic_check"
         tools:visibility="visible" />
 </FrameLayout>
