--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,11 @@
         <item name="windowNoTitle">false</item>
     </style>
 
+    <style name="AppTheme.NoTitle">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -38,8 +43,25 @@
         <item name="android:excludeFromRecents">true</item>
     </style>
 
+    <style name="DialogActivityTheme.NoTitle" parent="Theme.AppCompat.DayNight.Dialog.MinWidth">
+        <item name="windowNoTitle">true</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:excludeFromRecents">true</item>
+        <item name="windowActionBar">false</item>
+    </style>
+
     <style name="CaptionStyle">
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textSize">16dp</item>
+    </style>
+
+    <style name="ToolBarStyle" parent="AppTheme">
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+<!--        <item name="actionOverflowButtonStyle">@style/Widget.AppCompat.ActionButton.Overflow</item>-->
+<!--        <item name="drawerArrowStyle">@style/Widget.AppCompat.DrawerArrowToggle</item>-->
+        <item name="actionMenuTextColor">@color/colorPrimary</item>
+        <item name="android:actionMenuTextColor">@color/colorAccent</item>
     </style>
 </resources>
