--- a/app/src/main/res/layout/list_item_episode.xml
+++ b/app/src/main/res/layout/list_item_episode.xml
@@ -12,7 +12,7 @@
     android:foreground="@drawable/ripple"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:paddingStart="8dp">
 
 
     <TextView
@@ -42,7 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginVertical="8dp">
 
         <LinearLayout
             android:id="@+id/listItem_episode_extraInfo"
@@ -77,14 +78,13 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="8dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginEnd="8dp"
                     android:text="Staffel:"
                     android:textStyle="bold" />
 
@@ -117,7 +117,6 @@
                 android:id="@+id/listItem_episode_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
                 tools:text="4.5 ☆" />
 
         </LinearLayout>
@@ -204,21 +203,28 @@
                 android:id="@+id/listItem_episode_viewCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
                 tools:text="| 2" />
 
         </LinearLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/listItem_episode_seen"
+    <FrameLayout
+        android:id="@+id/listItem_episode_seen_touchZone"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:clickable="true"
-        android:foreground="@drawable/ripple"
-        android:padding="5dp"
-        android:tint="@color/colorDrawable"
-        app:srcCompat="@drawable/ic_check" />
+        android:layout_height="match_parent"
+        android:padding="8dp">
+
+        <ImageView
+
+            android:id="@+id/listItem_episode_seen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:clickable="true"
+            android:foreground="@drawable/ripple"
+            android:padding="5dp"
+            app:srcCompat="@drawable/ic_check"
+            app:tint="@color/colorDrawable" />
+    </FrameLayout>
 
 </LinearLayout>
